<resources>
    <string name="app_name">TapTrap Attack Showcase</string>
    <string name="title">TapTrap</string>
    <string name="about_title">About</string>
    <string name="attacks_title">Attacks</string>
    <string name="about_description">This application showcases different attack scenarios using TapTrap - an animation-driven tapjacking attack.</string>
    <string name="permission_bypass_subtitle">Permission Bypass</string>
    <string name="other_attacks_subtitle">Other Attacks</string>
    <string name="btn_runtime_permissions">Runtime Permissions</string>
    <string name="btn_device_admin">Device Admin</string>
    <string name="btn_display_over_apps">Display Over Apps</string>
    <string name="btn_notification_service">Notification Listener Service</string>
    <string name="btn_web">Web Permissions</string>
    <string name="btn_app_touchjacking">App Touchjacking</string>
    <string name="btn_clickjacking">Clickjacking</string>
    <string name="btn_control_ui_elements">Control UI Elements</string>
    <string name="score_0">Score: %1$d</string>
    <string name="failed_runtime_permission_toast">Failed to retrieve the runtime permission. Restarting…</string>
    <string name="failed_web_permission_toast">Failed to retrieve the web permission. Restarting…</string>
    <string name="start_game">Start Game</string>
    <string name="tap_me">Tap Me!</string>
    <string name="no_tap_me">No, Tap Me!</string>
    <string name="game_desc">Tap on every button with the text \"Tap Me!\" in order to increase the score.</string>
    <string name="clickjacking_desc">Select books you want to read. You receive an summary of your selected books and can start reading. Use the switch below to deactivate transparency and see the attacker\'s view.</string>
    <string name="transparency_switch_desc">Deactivate transparency</string>
    <string name="books_heading">Books</string>
    <string name="btn_go_to_reading_list">Go To Reading List</string>
    <string name="book_details_heading">Details</string>
    <string name="btn_start_reading">Start Reading</string>
    <string name="btn_view_book_details">View Details</string>
    <string name="book_title">&lt;b>Title:&lt;/b> %1$s</string>
    <string name="book_author">&lt;b>Author:&lt;/b> %1$s</string>
    <string name="book_selection_placeholder">Select a book, view its details and start reading.</string>
    <string name="book_summary_heading">Summary:</string>
    <string name="book_summary">%1$s</string>
    <string name="runtime_permission_attack_description">Click on the button below to start the attack. The app will try to gain the camera permission.</string>
    <string name="start">Start</string>
    <string name="notification_attack_desc">Press on the Start-button to start the attack. Use the switch below to deactivate transparency and see the attacker\'s view.</string>
    <string name="activate_notification_listener_service">Activate Notification Listener Service</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="notification_intercepting_desc">The app can now receive all notifications on the device. A received notification will be displayed here.</string>
    <string name="receiving_notifications">Receiving notifications...</string>
    <string name="confirm">Confirm</string>
</resources>