<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="12dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".notificationservice.NotificationServiceActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_notification_service"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:textAlignment="center"
        android:text="@string/notification_attack_desc"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginHorizontal="12dp"
            android:text="@string/transparency_switch_desc"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_notification_transparency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_start_notif_attack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/start"
        android:textSize="18sp"
        android:layout_gravity="center"/>


</LinearLayout>