<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".notificationservice.NotificationServiceAttackActivity">

    <TextView
        android:id="@+id/notification_settings_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="50dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/notification_settings"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="90dp">

        <TextView
            android:id="@+id/notification_intercepting_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:textSize="11sp"
            android:text="@string/notification_intercepting_desc"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/notification_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text=""/>

        <TextView
            android:id="@+id/notification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text=""/>

        <TextView
            android:id="@+id/notification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textSize="12sp"
            android:text=""/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/notif_switch_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activate_notification_listener_service"
            android:layout_margin="24dp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/activate_notification_listener_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="84dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/confirm"
        android:textSize="18sp"
        android:enabled="false"
        android:layout_gravity="bottom"/>

</FrameLayout>